# bee-agents

./: .gitignore  AGENTS.md  AI_IMPROVEMENT_GUIDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  MONITORING_GUIDE.md  README.md  ai-improvement-plan.md  ai-improvement-tracking.md  ai-quick-reference.md  ai-self-check-workflow.md  ai_improvement_report.html  ai_monitor.py  ai_monitor.sh  ai_realtime_server.py  ai_realtime_tracker.py  ai_report.py  demo_client.py  realtime_dashboard.html  start_monitoring.sh
.sisyphus/drafts/: input-box-redesign.md
config/: assistants.toml  default.toml  models.toml
config/prompts/: assistant-media.md  assistant-money.txt  assistant-student.txt  assistant-viral.md  critic.txt  system.txt
config/skills/: README.md  _example.toml  viral.toml
config/skills/search/: capability.md  search.py  skill.toml
config/skills/viral/: capability.md  skill.toml  template.md
config/skills/writing/: capability.md  skill.toml  template.md
docs/: ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_IMPROVEMENTS.md  DEEP_RESEARCH.md  DEEP_RESEARCH_IMPLEMENTATION.md  DEEP_RESEARCH_QUICKSTART.md  EVOLUTION.md  EVOLUTION_DESIGN.md  GATEWAY.md  LARK.md  LEARNINGS.md  MEMORY.md  README.md  Rust个人智能体系统(Bee)-架构设计白皮书.md  SKILLS.md  SWARM_IDE_REFERENCE_PLAN.md  WEBUI.md  WHATSAPP.md  ai-improvement-plan.md  ai-improvement-tracking.md  ai-self-check-workflow.md  使用文档.md
docs/plans/: 2025-02-24-task-workflow-dependency-design.md  2025-02-24-workflow-dependency.md
docs/workflow/: README.md
monitoring_data/: daily_logs.json  error_logs.json  realtime_sessions.json
src/: agent.rs  config.rs  lib.rs  main.rs
src/core/: builder.rs  error.rs  mod.rs  orchestrator.rs  recovery.rs  session_supervisor.rs  shutdown.rs  state.rs  task_scheduler.rs
src/evolution/: analyzer.rs  engine.rs  executor.rs  loop_.rs  mod.rs  planner.rs  types.rs
src/gateway/: hub.rs  intent.rs  message.rs  mod.rs  persistent_session.rs  runtime.rs  session.rs  session_store.rs  spoke.rs  task_queue.rs
src/integrations/: lark.rs  mod.rs  whatsapp.rs
src/llm/: deepseek.rs  embedding.rs  mock.rs  mod.rs  openai.rs  router.rs  traits.rs
src/memory/: async_io.rs  async_persistence.rs  conversation.rs  learnings.rs  long_term.rs  markdown_store.rs  mod.rs  persistence.rs  rag.rs  token_budget.rs  tokenizer.rs  user_memory.rs  working.rs
src/observability/: mod.rs
src/plugins/: mod.rs
src/react/: critic.rs  events.rs  loop_.rs  memory.rs  mod.rs  planner.rs
src/skills/: loader.rs  mod.rs  selector.rs
src/tools/: browser.rs  code_edit.rs  code_grep.rs  code_read.rs  code_review.rs  code_write.rs  create.rs  create_group.rs  deep_search.rs  echo.rs  executor.rs  filesystem.rs  git_commit.rs  git_diff.rs  knowledge_graph.rs  list_agents.rs  mod.rs  plugin.rs  registry.rs  report_generator.rs  schema.rs  search.rs  send.rs  shell.rs  source_validator.rs  test_check.rs  test_run.rs
src/ui/: app.rs  event.rs  mod.rs  render.rs
src/workflow/: builder.rs  engine.rs  graph.rs  mod.rs  types.rs
static/: README.md  index.html  index.html.backup.20260219_105815  metrics.html  swarm.html  tasks.html
tests/: workflow_integration_test.rs
