[package]
name = "bee"
version = "0.1.0"
edition = "2021"
description = "Rust 个人智能体系统 - 高性能、安全且具备长期记忆"
authors = ["Bee Team"]
license = "MIT"

# 默认运行主程序 TUI（cargo run 即启动 bee）
default-run = "bee"

[[bin]]
name = "bee"
path = "src/main.rs"

[[bin]]
name = "bee-whatsapp"
path = "src/bin/whatsapp.rs"

[[bin]]
name = "bee-web"
path = "src/bin/web.rs"
required-features = ["web"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

ratatui = "0.28"
crossterm = "0.28"

async-openai = { version = "0.32", features = ["chat-completion"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

config = "0.14"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-trait = "0.1"
futures-util = "0.3"
uuid = { version = "1.6", features = ["v4"] }

reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
html2text = "0.16"

# Web 流式响应
bytes = { version = "1.0", optional = true }

# WhatsApp 集成 (bee-whatsapp，需公网 Webhook 域名)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }

# 浏览器控制（需安装 Chrome/Chromium）
headless_chrome = { version = "1.0", optional = true }

[features]
default = []
whatsapp = ["dep:axum", "dep:tower"]
web = ["dep:axum", "dep:tower", "dep:bytes"]
browser = ["dep:headless_chrome"]
