[package]
name = "bee"
version = "0.1.0"
edition = "2021"
description = "Rust 个人智能体系统 - 高性能、安全且具备长期记忆"
authors = ["Bee Team"]
license = "MIT"

# 默认运行主程序 TUI（cargo run 即启动 bee）
default-run = "bee"

[[bin]]
name = "bee"
path = "src/main.rs"

[[bin]]
name = "bee-whatsapp"
path = "src/bin/whatsapp.rs"

[[bin]]
name = "bee-web"
path = "src/bin/web.rs"
required-features = ["web"]

[[bin]]
name = "bee-lark"
path = "src/bin/lark.rs"
required-features = ["lark"]

[[bin]]
name = "bee-evolution"
path = "src/bin/evolution_test.rs"

[[bin]]
name = "bee-gateway"
path = "src/bin/gateway.rs"
required-features = ["gateway"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

ratatui = "0.28"
crossterm = "0.28"

async-openai = { version = "0.32", features = ["chat-completion", "embedding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

config = "0.14"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-trait = "0.1"
futures-util = "0.3"
uuid = { version = "1.6", features = ["v4"] }

reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
html2text = "0.16"

# SQLite 持久化
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# 代码搜索与分析（自主迭代）
regex = "1.10"
glob = "0.3"
walkdir = "2.4"

# 中文分词（长期记忆检索）
jieba-rs = "0.7"

# TOML 配置解析（skills 模块）
toml = "0.8"

# Web 流式响应
bytes = { version = "1.0", optional = true }

# WhatsApp 集成 (bee-whatsapp，需公网 Webhook 域名)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }

# 浏览器控制（需安装 Chrome/Chromium）
headless_chrome = { version = "1.0", optional = true }

# WebSocket（网关架构）
tokio-tungstenite = { version = "0.21", optional = true }

[features]
default = []
whatsapp = ["dep:axum", "dep:tower"]
lark = ["dep:axum", "dep:tower"]
web = ["dep:axum", "dep:tower", "dep:bytes"]
browser = ["dep:headless_chrome"]
gateway = ["dep:axum", "dep:tower", "dep:tokio-tungstenite"]

[dev-dependencies]
tempfile = "3.0"
